; ModuleID = '/home/carl/AnghaBench/Provenance/Cores/PicoDrive/platform/gp2x/extr_warm.c_warm_virt2phys.c'
source_filename = "/home/carl/AnghaBench/Provenance/Cores/PicoDrive/platform/gp2x/extr_warm.c_warm_virt2phys.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@warm_fd = common dso_local global i32 0, align 4
@WARMC_VIRT2PHYS = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [23 x i8] c"WARMC_VIRT2PHYS failed\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i64 @warm_virt2phys(i8* %0) #0 {
  %2 = alloca i64, align 8
  %3 = alloca i8*, align 8
  %4 = alloca i64, align 8
  %5 = alloca i32, align 4
  store i8* %0, i8** %3, align 8
  %6 = load i8*, i8** %3, align 8
  %7 = ptrtoint i8* %6 to i64
  store i64 %7, i64* %4, align 8
  %8 = load i32, i32* @warm_fd, align 4
  %9 = load i32, i32* @WARMC_VIRT2PHYS, align 4
  %10 = call i32 @ioctl(i32 %8, i32 %9, i64* %4)
  store i32 %10, i32* %5, align 4
  %11 = load i32, i32* %5, align 4
  %12 = icmp ne i32 %11, 0
  br i1 %12, label %13, label %15

13:                                               ; preds = %1
  %14 = call i32 @perror(i8* getelementptr inbounds ([23 x i8], [23 x i8]* @.str, i64 0, i64 0))
  store i64 -1, i64* %2, align 8
  br label %17

15:                                               ; preds = %1
  %16 = load i64, i64* %4, align 8
  store i64 %16, i64* %2, align 8
  br label %17

17:                                               ; preds = %15, %13
  %18 = load i64, i64* %2, align 8
  ret i64 %18
}

declare dso_local i32 @ioctl(i32, i32, i64*) #1

declare dso_local i32 @perror(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
